# AuraAI

./: .gitignore  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  i10n.yaml  pubspec.yaml
backend/: .env.example  .gitignore  alembic.ini  gunicorn.conf.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/app/: app.py
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: auth.py  chat.py  config.py  sync.py  user.py
backend/app/core/: config.py  security.py
backend/app/crud/: base.py  conversation.py  user.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: __init__.py  conversation.py  token_usage.py  user.py
backend/app/schemas/: chat.py  conversation.py  user.py
backend/app/services/: chat_service.py
backend/app/services/deepseek/: __init__.py  chat_handler.py  deepseek_chat.py  message_handler.py  message_processor.py  token_manager.py
backend/app/services/mcp/: __init__.py  client.py  manager.py  models.py  service.py  tool_handler.py  worker.py
backend/app/utils/: datetime_utils.py  logger.py  response_formatter.py
backend/config/: mcp_servers.json  model_configs.json
backend/config/app/: duckduckgo-search.json
backend/scripts/: init_config.py  init_db.py  startup.py
lib/: main.dart
lib/core/: __export.dart
lib/core/api/: __export.dart  api_client_factory.dart  auth_interceptor.dart  http_service.dart
lib/l10n/: app_en.arb
lib/widgets/: enhanced_code_block.dart
web/: index.html  manifest.json
(+67 files in other folders)
